popravljeni neki findbugs warningsi
git-svn-id: http://morgoth.zemris.fer.hr/svn/vhdllab/vhdllab2/trunk@1239 cbae1e92-611c-0410-ab7b-b19ac7dee622